--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,16 @@ body {
   color: #339933;
 }
 
+.price {
+  font-weight: bolder;
+}
+
+#prices {
+  font-size: 75%;
+  font-weight: bold;
+  font-style: italic;
+}
+
 #orderForm .pizzaChoice {
   display: inline-block;
   vertical-align: middle;
